--- a/ALSAExample/Makefile.am
+++ b/ALSAExample/Makefile.am
@@ -33,5 +33,5 @@ endif
 endif
 
 libasound_module_pcm_NeutronBombALSAExtPluginTest_la_SOURCES = NeutronBombALSAExtPluginTest.C
-libasound_module_pcm_NeutronBombALSAExtPluginTest_la_CPPFLAGS = -I$(top_srcdir)/gtkiostream/include $(EIGEN_CFLAGS)
+libasound_module_pcm_NeutronBombALSAExtPluginTest_la_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/gtkiostream/include $(EIGEN_CFLAGS)
 libasound_module_pcm_NeutronBombALSAExtPluginTest_la_LDFLAGS = -module -avoid-version -export-dynamic -no-undefined
